# controllers/authController.go
@@ -4,35 +4,10 @@ import (
 	"final-project/models"
 	"fmt"
 	"net/http"
-	"time"
 
 	"github.com/gin-gonic/gin"
-	"golang.org/x/crypto/bcrypt"
 	"gorm.io/gorm"
 )
-
-// Get User Profile godoc
-// @Summary Get info of current login user
-// @Description Get logged in user info
-// @Tags Users
-// @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
-// @Security BearerToken
-// @Produce json
-// @Success 200 {object} map[string]interface{}
-// @Router /users/profiles [get]
-func GetUserProfile(c *gin.Context){
-	// get current user
-	usr, err := models.GetCurrentUser(c)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "You need to sign in to add review"})
-		return
-	}
-
-	usr.HidePassword()
-
-	c.JSON(http.StatusOK, gin.H{"data": usr})
-}
-
 
 type LoginInput struct {
 	Username string `json:"username" binding:"required"`
@@ -124,53 +99,4 @@ func Register(c *gin.Context) {
     }
 
     c.JSON(http.StatusOK, gin.H{"message": "registration success", "user": user})
-}
-
-
-// Change password godoc
-// @Summary Change users password.
-// @Description renew users password.
-// @Tags Users
-// @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
-// @Security BearerToken
-// @Produce json
-// @Param Body body ChangePasswordInput true "the body to change user password"
-// @Success 200 {object} map[string]interface{}
-// @Router /users/change-password [patch]
-func ChangePassword(c *gin.Context) {
-    db := c.MustGet("db").(*gorm.DB)
-    
-    // get current user
-	usr, err := models.GetCurrentUser(c)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "You need to sign in to add review"})
-		return
-	}
-
-    var input ChangePasswordInput
-    if err := c.ShouldBindJSON(&input); err != nil {
-        c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-        return
-    }
-    
-    // check current password if true
-    if err := models.VerifyPassword(input.CurrentPassword, usr.Password); err != nil {
-        c.JSON(http.StatusBadRequest, gin.H{"error": "Wrong password"})
-		return
-    }
-
-    hashedNewPassword, errPassword := bcrypt.GenerateFromPassword([]byte(input.NewPassword), bcrypt.DefaultCost)
-	if errPassword != nil {
-		return
-	}
-    newPassword := string(hashedNewPassword)
-    newUser := models.User{}
-
-    newUser.Username = usr.Username
-    newUser.Email    = usr.Email
-    newUser.Password = newPassword
-    newUser.UpdatedAt= time.Now()
-
-    db.Model(&usr).Updates(newUser)
-    c.JSON(http.StatusOK, gin.H{"message": "change password success"})
 }
