# docs/swagger.json
@@ -229,22 +229,22 @@
                         "BearerToken": []
                     }
                 ],
-                "description": "Only admin have permission to create publisher",
+                "description": "Only publisher and admin have permission to create games",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "Admin"
+                    "Publisher"
                 ],
-                "summary": "Create a new game",
+                "summary": "Create a new games",
                 "parameters": [
                     {
-                        "description": "the body to create new game",
+                        "description": "the body to create new games",
                         "name": "Body",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controllers.GameInput"
+                            "$ref": "#/definitions/controllers.AddGameInput"
                         }
                     },
                     {
@@ -260,106 +260,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.Game"
-                        }
-                    }
-                }
-            }
-        },
-        "/games/:id/add-reviews": {
-            "post": {
-                "security": [
-                    {
-                        "BearerToken": []
-                    }
-                ],
-                "description": "Create new review",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Games"
-                ],
-                "summary": "Create a review",
-                "parameters": [
-                    {
-                        "description": "the body to create new review",
-                        "name": "Body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/controllers.AddReviewInput"
-                        }
-                    },
-                    {
-                        "type": "string",
-                        "description": "Authorization. How to input in swagger : 'Bearer \u003cinsert_your_token_here\u003e'",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Games Id",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.Review"
-                        }
-                    }
-                }
-            }
-        },
-        "/games/:id/add-to-bookmark": {
-            "patch": {
-                "security": [
-                    {
-                        "BearerToken": []
-                    }
-                ],
-                "description": "User add games to bookmark",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Games"
-                ],
-                "summary": "Bookmarked games",
-                "parameters": [
-                    {
-                        "description": "the body to add games into bookmark",
-                        "name": "Body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/controllers.AddReviewInput"
-                        }
-                    },
-                    {
-                        "type": "string",
-                        "description": "Authorization. How to input in swagger : 'Bearer \u003cinsert_your_token_here\u003e'",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Game Id",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.Bookmark"
                         }
                     }
                 }
@@ -404,7 +304,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Admin"
+                    "Publisher"
                 ],
                 "summary": "Delete existing game by id",
                 "parameters": [
@@ -446,7 +346,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Admin"
+                    "Publisher"
                 ],
                 "summary": "Update existing game by id",
                 "parameters": [
@@ -470,7 +370,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controllers.GameInput"
+                            "$ref": "#/definitions/controllers.UpdateGameInput"
                         }
                     }
                 ],
@@ -479,6 +379,97 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.Game"
+                        }
+                    }
+                }
+            }
+        },
+        "/games/{id}/add-reviews": {
+            "post": {
+                "security": [
+                    {
+                        "BearerToken": []
+                    }
+                ],
+                "description": "Create new review",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Games"
+                ],
+                "summary": "Create a review",
+                "parameters": [
+                    {
+                        "description": "the body to create new review",
+                        "name": "Body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.ReviewInput"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization. How to input in swagger : 'Bearer \u003cinsert_your_token_here\u003e'",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Game Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Review"
+                        }
+                    }
+                }
+            }
+        },
+        "/games/{id}/add-to-bookmark": {
+            "patch": {
+                "security": [
+                    {
+                        "BearerToken": []
+                    }
+                ],
+                "description": "User add games to bookmark",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Games"
+                ],
+                "summary": "Bookmarked games",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization. How to input in swagger : 'Bearer \u003cinsert_your_token_here\u003e'",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Game Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Bookmark"
                         }
                     }
                 }
@@ -497,7 +488,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Games Id",
+                        "description": "Game Id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -1034,7 +1025,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controllers.UpdateReviewInput"
+                            "$ref": "#/definitions/controllers.ReviewInput"
                         }
                     }
                 ],
@@ -1136,7 +1127,7 @@
                         "BearerToken": []
                     }
                 ],
-                "description": "renew users password.",
+                "description": "Renew users password.",
                 "produces": [
                     "application/json"
                 ],
@@ -1207,20 +1198,70 @@
                     }
                 }
             }
+        },
+        "/users/regist-publisher": {
+            "patch": {
+                "security": [
+                    {
+                        "BearerToken": []
+                    }
+                ],
+                "description": "Become publisher by upgrade your role.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Regist to become publisher.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization. How to input in swagger : 'Bearer \u003cinsert_your_token_here\u003e'",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "the body to become publisher",
+                        "name": "Body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.RegisPublisherInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "controllers.AddReviewInput": {
+        "controllers.AddGameInput": {
             "type": "object",
             "properties": {
-                "content": {
+                "category_id": {
+                    "type": "integer"
+                },
+                "description": {
                     "type": "string"
                 },
-                "rate": {
+                "genre_id": {
                     "type": "integer"
                 },
-                "user_id": {
-                    "type": "integer"
+                "image_url": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
                 }
             }
         },
@@ -1246,32 +1287,6 @@
                     "type": "string"
                 },
                 "new_password": {
-                    "type": "string"
-                }
-            }
-        },
-        "controllers.GameInput": {
-            "type": "object",
-            "properties": {
-                "category_id": {
-                    "type": "integer"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "genre_id": {
-                    "type": "integer"
-                },
-                "image_url": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "publisher_id": {
-                    "type": "integer"
-                },
-                "release_date": {
                     "type": "string"
                 }
             }
@@ -1310,6 +1325,14 @@
                 }
             }
         },
+        "controllers.RegisPublisherInput": {
+            "type": "object",
+            "properties": {
+                "logo_url": {
+                    "type": "string"
+                }
+            }
+        },
         "controllers.RegisterInput": {
             "type": "object",
             "required": [
@@ -1329,7 +1352,7 @@
                 }
             }
         },
-        "controllers.UpdateReviewInput": {
+        "controllers.ReviewInput": {
             "type": "object",
             "properties": {
                 "content": {
@@ -1337,6 +1360,26 @@
                 },
                 "rate": {
                     "type": "integer"
+                }
+            }
+        },
+        "controllers.UpdateGameInput": {
+            "type": "object",
+            "properties": {
+                "category_id": {
+                    "type": "integer"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "genre_id": {
+                    "type": "integer"
+                },
+                "image_url": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
                 }
             }
         },
@@ -1464,6 +1507,9 @@
                 },
                 "updated_at": {
                     "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
                 }
             }
         },
